fix long map on firefox/safari

--- a/lakegallery/map/static/map/style.css
+++ b/lakegallery/map/static/map/style.css
@@ -342,7 +342,7 @@ div.slider-handle.min-slider-handle.round {
 .mobileMapPanel {
 	position: absolute;
 	padding: 0;
-	height: calc(100vh - 56px);
+	height: calc(100% - 56px);
 }
 
 #mobileStoryMap {
